[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-panda"
version = "0.1.0"
description = "Convert spectra to PANDA format"
authors = [{ name = "Markus de Koster" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy >= 1.23.5"
]

[project.optional-dependencies]
tests = ["pytest >= 7.3.1"]

[project.urls]
Home = "https://github.com/th-koeln-iet/py-panda"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]



