[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypanda"
version = "1.0.0"
description = "Convert harmonic spectra to PANDA format"
authors = [{ name = "Markus de Koster" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy >= 1.23.5"
]

[project.optional-dependencies]
tests = ["pytest >= 7.3.1"]

[project.urls]
Home = "https://github.com/cire-thk/py-panda"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]



